# aspm

./: .gitignore  Cargo.toml  LICENSE  README.md  aspkg.yaml
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: main.rs
src/cli/: mod.rs
src/config/: aspkg.rs  aspub.rs  dependency.rs  mod.rs
src/git/: mod.rs
src/install/: mod.rs  settings.rs
src/publish/: matcher.rs  mod.rs
src/resolver/: mod.rs
src/version/: mod.rs  semantic.rs
