[package]
name = "aspm"
version = "1.0.0"
edition = "2021"
description = "AI Skill Package Manager"
authors = ["aspm"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
git2 = { version = "0.18", features = ["vendored-openssl"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
warnings = "deny"
